# forked

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
src/forked/: __init__.py  __main__.py  cli.py  functions.json
tests/: test_forked.py
