[metadata]
name = forked
version = 0.0.1
description = Fork of NYCPlanning project python-geosupport 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mlipper/forked
author = Matthew Lipper
author_email = mlipper@gmail.com
license = Apache-2.0
license_files = LICENSE.txt
classifiers =
    Development Status:: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Utilities
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent
keywords = geocoding, nyc

[options]
packages = find:
install_requires =
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    bray=forked.cli:main

[options.extras_require]
tests =
    flake8
    pytest-cov
    pytest

[options.package_data]
forked = functions.json

[options.packages.find]
where=src

[flake8]
exclude = .tox,*.egg,build,dist
ignore =
    E121,E123,E126,E226,E24,E704
max_line_length = 140
select = E,W,F

[isort]
atomic=true
lines_after_imports=2
lines_between_types=1
multi_line_output=5
not_skip=__init__.py
known_first_party =
    forked
    tests
skip = .tox,.eggs,build,dist

[build-system]
requires = ["setuptools", "wheel"]
